tests/test_files/initialization_inference/method_move.stderr
error: access to uninitialized path
- initialization_inference/method_move:19:2
19 |   foo.take()
   |   ^^^
